# monsum

./: .gitignore  Cargo.toml
src/: main.rs
src/lib/: cli.rs  day.rs  mod.rs  month.rs
src/lib/utils/: get_date_from_path.rs  get_event_from_line.rs  get_path_from_line.rs  get_task_from_line.rs  mod.rs
