[package]
name = "summon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = "0.4.22"
clap = { version = "3.2.22", features = ["derive"] }
enum-iterator = "1.2.0"
inquire = "0.3.0"
lazy_static = "1.4.0"
regex = "1.6.0"

[lib]
name = "lib"
path = "src/lib/mod.rs"
